[package]
name = "gcd"
version = "0.1.0"
edition = "2021"
description = "Git Change Directory - Quick repository navigation tool"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
fuzzy-matcher = "0.3"